button width on tablet an mobile resolution fixed

--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -4,7 +4,7 @@
   padding-right: 15px;
   padding-left: 15px;
 
-  background-color: orange;
+  // background-color: orange;
 
   // 290px + 2 paddings
   @media screen and (max-width: 767.98px) {
